2008-04-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/disp_holder.cpp:
	* qt4/disp_holder.h:
	* qt4/log_player.cpp:
	* qt4/log_player.h:
	* qt4/log_player_tool_bar.cpp:
	* qt4/log_player_tool_bar.h:
	* qt4/main_data.cpp:
	* qt4/main_data.h:
	* qt4/main_window.cpp:
	* qt4/main_window.h:
	* qt4/player_painter.cpp:
	* qt4/remote_monitor.cpp:
	* rcsslogplayer/parser.cpp:
	* rcsslogplayer/util.cpp:
	* tool/rcg3to4.cpp:
	- fixed bugs in the older version log parsing.
	- implemented a function of data segment recording.

	* qt4/draw_info_painter.cpp:
	* qt4/draw_info_painter.h:
	* qt4/Makefile.am:
	* qt4/config_dialog.cpp:
	* qt4/config_dialog.h:
	* qt4/disp_holder.cpp:
	* qt4/disp_holder.h:
	* qt4/field_canvas.cpp:
	* qt4/main_window.cpp:
	* qt4/options.cpp:
	* qt4/options.h:
	* qt4/player_painter.cpp:
	* qt4/score_board_painter.cpp:
	* qt4/score_board_painter.h:
	* rcsslogplayer/handler.h:
	* rcsslogplayer/parser.cpp:
	* rcsslogplayer/parser.h:
	* rcsslogplayer/types.h:
	- fixed bugs about draw info parsing.
	- supported draw info painting.

	* qt4/Makefile.am:
	* qt4/team_graphic.cpp:
	* qt4/team_graphic.h:
	* qt4/team_graphic_painter.cpp:
	* qt4/team_graphic_painter.h:
	* qt4/config_dialog.cpp:
	* qt4/config_dialog.h:
	* qt4/disp_holder.cpp:
	* qt4/disp_holder.h:
	* qt4/field_canvas.cpp:
	* qt4/main_data.cpp:
	* qt4/main_data.h:
	* qt4/options.cpp:
	* qt4/options.h:
	* qt4/player_painter.cpp:
	* qt4/player_type_dialog.cpp:
	- supported team_graphic data.

	* qt4/log_slider_tool_bar.cpp:
	* qt4/log_slider_tool_bar.h:
	- implemented a click action in the cycle slider.

	* rcsslogplayer/parser.cpp:
	- fixed a defect of msg info parsing.

	* qt4/ball_painter.cpp:
	* qt4/field_canvas.cpp:
	* qt4/field_painter.cpp:
	* qt4/log_player_tool_bar.cpp:
	* qt4/main_window.cpp:
	* qt4/options.cpp:
	* qt4/options.h:
	* qt4/player_painter.cpp:
	* qt4/score_board_painter.cpp:
	* qt4/score_board_painter.h:
	- changed size policy for the minimum mode.