@@ -123,14 +123,36 @@ private:
 
     virtual
     void doHandleMsgInfo( const int,
+                          const int,
                           const std::string & );
 
     virtual
-    void doHandlePlayMode( const PlayMode );
+    void doHandlePlayMode( const int,
+                           const PlayMode );
 
     virtual
-    void doHandleTeamInfo( const TeamT &,
+    void doHandleTeamInfo( const int,
+                           const TeamT &,
                            const TeamT & );
+
+    virtual
+    void doHandleDrawClear( const int )
+      { };
+
+    virtual
+    void doHandleDrawPointInfo( const int,
+                                const PointInfoT & )
+      { }
+
+    virtual
+    void doHandleDrawCircleInfo( const int,
+                                 const CircleInfoT & )
+      { }
+
+    virtual
+    void doHandleDrawLineInfo( const int,
+                               const LineInfoT & )
+      { }
 
     virtual
     void doHandlePlayerType( const PlayerTypeT & );
@@ -488,9 +510,11 @@ RCGSplitter::printShowOld( const ShowInfoT & show )
 
 /*--------------------------------------------------------------------*/
 void
-RCGSplitter::doHandleMsgInfo( const int board,
+RCGSplitter::doHandleMsgInfo( const int time,
+                              const int board,
                               const std::string & msg )
 {
+    M_time = time;
     createOutputFile( M_time );
 
     if ( ! M_fout.is_open() )
@@ -555,16 +579,20 @@ RCGSplitter::doHandleEOF()
 
 /*--------------------------------------------------------------------*/
 void
-RCGSplitter::doHandlePlayMode( const PlayMode pm )
+RCGSplitter::doHandlePlayMode( const int time,
+                               const PlayMode pm )
 {
+    M_time = time;
     M_playmode = pm;
 }
 
 /*--------------------------------------------------------------------*/
 void
-RCGSplitter::doHandleTeamInfo( const TeamT & team_l,
+RCGSplitter::doHandleTeamInfo( const int time,
+                               const TeamT & team_l,
                                const TeamT & team_r )
 {
+    M_time = time;
     M_team_l = team_l;
     M_team_r = team_r;
 }
